2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Suppress more warnings on VC++.
	* urbi-prog-cxx.m4: Here.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Tweak flags and define WIN32 for VC++.
	* urbi-prog-cxx.m4: Here.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	More restyling
	* restyle: !strcmp -> STREQ.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Always remove useless parens for returns.
	* restyle: here.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	More restyle
	* reindent: Rename as...
	* restyle: this.
	Also handle comments behind }.
	* svn-externals: Add sdk.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	More restyling
	* build-aux/reindent: Rename as...
	* build-aux/restyle: this.
	(&stderr): New.
	(&update_file): Say when a file is changed.
	(&clear_closing_brace): Strip comments behind the }s.
	* build-aux/README: Adjust.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Move some files to the new sdk folder.
        Now in common/sdk:
	* param-pc.mk.in: Remove.
	* umake.in: Remove.
	* urbi-dirs.m4: Remove.
	* urbi-engine.ac: Remove.
	* urbi-sdk.m4: Remove.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	"*foo." -> "foo->"
	* build-aux/reindent: Do that.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	restyle returns too
	* reindent: Handle returns.
	(&update_file): New, from Automake.
	Use it to save cycles.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix check.mk
	* check.mk: Add missing backslash.
	* svn-externals.mk: Fix.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	* urbi-sdk.m4: Check the tarball name.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Adjust to liburbi-c++ renamed as urbi-sdk
	* README, param-pc.mk.in, urbi-dirs.m4, urbi-sdk.m4: Adjust.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	* check.mk: If VERBOSE, dump the logs.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix svn up
	* svn-externals: here.
