@@ -1,3 +1,8 @@
+2006-12-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Detect more Windows platforms.
+	* test.sh.in: Detect MingW, Interix and other Windows environments.
+
 2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Suppress more warnings on VC++.
